# crypto_dca

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  alembic.ini  manage.py  pyproject.toml  railway.json  railway.tgbot.json  railway.trader.json  whitelist_transactions.txt  whitelist_vulture.py
.claude/: settings.json
.claude/agents/: pattern-reviewer.md
.claude/commands/: cookbook.md  patterns.md  qa.md
.claude/hooks/: ruff-fix.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
core/: __init__.py
core/config/: __init__.py  bootstrap.py  logging.py  settings.py
core/db/: base.py  session.py
core/db/migrations/: env.py  script.py.mako
core/db/migrations/versions/: 695a89eca8d0_baseline_django_managed_schema.py
core/exchange/: __init__.py  bybit.py  dry_run.py  errors.py  types.py  ws.py
core/services/: __init__.py  compensator.py  consolidate.py  events.py  grid_maintainer.py  healer.py  order_common.py  order_manager.py  protector.py  readopt.py  reconciliation.py  redis_bus.py  repository.py  runtime.py
core/strategy/: __init__.py  compensation.py  grid.py  pricing.py  reconstruction.py  rounding.py  types.py
core/trading/: __init__.py  admin.py  apps.py  models.py
core/trading/management/: __init__.py
core/trading/management/commands/: __init__.py  add_tg_admin.py  adopt_positions.py  consolidate_positions.py  preflight.py  readopt_free_balance.py
core/trading/migrations/: 0001_initial.py  0002_position_compensation_credit.py  0003_strategyconfig_tp_step.py  0004_position_filled_qty_position_sell_value.py  0005_strategyconfig_taker_fee.py  0006_notificationsettings.py  0007_botstatus_applied_grid_step_and_more.py  0008_notificationsettings_notify_order_cancelled.py  0009_botstatus_pending_credit.py
docs/: DEPLOY.md  django-removal-plan.md
scripts/: check_transactions.py  qa.sh  restart.sh
tests/: conftest.py
tests/integration/: test_bybit_live.py
tests/unit/: test_admin_filter.py  test_api_views.py  test_bybit_client.py  test_charts.py  test_compute_buy_qty.py  test_consolidate.py  test_dashboard_views.py  test_db_scaffold.py  test_digest_scheduler.py  test_dry_run_client.py  test_formatters.py  test_healthz.py  test_models.py  test_notify_settings.py  test_order_manager.py  test_preflight.py  test_property_math.py  test_readopt.py  test_redis_bus.py  test_runtime_grid.py  test_strategy_compensation.py  test_strategy_grid.py  test_strategy_pricing.py  test_strategy_reconstruction.py  test_strategy_rounding.py
tgbot/: __init__.py  __main__.py  charts.py  digest.py  filters.py  formatters.py  handlers.py  notifications.py  notify_settings.py  queries.py
trader/: __init__.py  __main__.py
web/: __init__.py  settings.py  urls.py  wsgi.py
web/api/: apps.py  health.py  serializers.py  urls.py  views.py
web/dashboard/: apps.py  forms.py  urls.py  views.py
web/dashboard/templates/dashboard/: base.html  config.html  index.html
