[project]
name = "crypto-dca"
version = "0.1.0"
description = "Long-only grid DCA trading bot for Bybit spot with pairwise loss compensation"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "pybit>=5.8",
    "aiogram>=3.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "dj-database-url>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "django-stubs>=5.1",
    "pre-commit>=4.0",
    "fakeredis>=2.26",
    "vulture>=2.16",
    "pylint>=4.0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 79  # PEP 8
extend-exclude = ["whitelist_vulture.py"]  # generated vulture whitelist

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "SIM",          # simplify
    "RUF",          # ruff-specific
    # pydocstyle: mandatory docstrings on modules, packages, public
    # classes/functions/methods (D419 forbids empty ones)
    "D100", "D101", "D102", "D103", "D104", "D419",
]
# E501 (line length) is enforced at 79 per PEP 8; the formatter reflows code,
# and any remaining over-long lines (strings/comments) are flagged to fix by hand.

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]
"**/migrations/*" = ["E501", "RUF012", "I001", "D"]
"**/__init__.py" = ["D104"]  # keep package __init__ files empty
"**/models.py" = ["RUF012"]  # Django Meta class attrs trigger false positives
"**/serializers.py" = ["RUF012"]
"**/forms.py" = ["RUF012"]
"**/admin.py" = ["RUF012"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]
exclude = ["migrations/", "whitelist_vulture.py"]

[tool.vulture]
paths = [
    "core",
    "tgbot",
    "trader",
    "web",
    "manage.py",
    "whitelist_vulture.py",
]
exclude = ["*/migrations/*"]
ignore_decorators = ["@router.*"]
min_confidence = 60

[tool.pylint.main]
ignore-paths = ["^.*/migrations/.*$"]

[tool.pylint.similarities]
min-similarity-lines = 8

[[tool.mypy.overrides]]
module = ["pybit.*", "fakeredis.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "web.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "web.settings"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit real Bybit testnet (skipped by default)",
]

[tool.coverage.run]
source = ["core"]
omit = ["*/migrations/*", "*/tests/*"]
