[project]
name = "crypto-dca"
version = "0.1.0"
description = "Long-only grid DCA trading bot for Bybit spot with pairwise loss compensation"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "pybit>=5.8",
    "aiogram>=3.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "dj-database-url>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "django-stubs>=5.1",
    "pre-commit>=4.0",
    "fakeredis>=2.26",
    "vulture>=2.16",
    "pylint>=4.0.6",
    "hypothesis>=6.0",
    "import-linter>=2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 79  # PEP 8
extend-exclude = ["whitelist_vulture.py"]  # generated vulture whitelist

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "SIM",          # simplify
    "RUF",          # ruff-specific
    "S",            # flake8-bandit (security): timeouts, secrets, shell, ...
    # pydocstyle: mandatory docstrings on modules, packages, public
    # classes/functions/methods (D419 forbids empty ones)
    "D100", "D101", "D102", "D103", "D104", "D419",
    # complexity/size limits (KISS / single-responsibility). Thresholds are
    # ratcheted to current worst — they block regression, not existing code.
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
ignore = [
    # `assert` is used only for mypy type-narrowing of internal, post-bootstrap
    # invariants (self._om etc.), never for runtime validation, and the daemons
    # are never run under `python -O` — so S101's strip-under-O concern doesn't
    # apply. Real validation uses explicit raises/guards.
    "S101",
]
# E501 (line length) is enforced at 79 per PEP 8; the formatter reflows code,
# and any remaining over-long lines (strings/comments) are flagged to fix by hand.

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8
max-returns = 7

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "D", "C901", "PLR09"]
"**/migrations/*" = ["E501", "RUF012", "I001", "D"]
"**/__init__.py" = ["D104"]  # keep package __init__ files empty
"**/models.py" = ["RUF012"]  # Django Meta class attrs trigger false positives
"**/serializers.py" = ["RUF012"]
"**/forms.py" = ["RUF012"]
"**/admin.py" = ["RUF012"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]
exclude = ["migrations/", "whitelist_vulture.py"]

[tool.vulture]
paths = [
    "core",
    "tgbot",
    "trader",
    "web",
    "manage.py",
    "whitelist_vulture.py",
]
exclude = ["*/migrations/*"]
ignore_decorators = ["@router.*"]
min_confidence = 60

[tool.pylint.main]
ignore-paths = ["^.*/migrations/.*$"]

[tool.pylint.similarities]
min-similarity-lines = 8

[[tool.mypy.overrides]]
module = ["pybit.*", "fakeredis.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "web.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "web.settings"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit real Bybit testnet (skipped by default)",
]

[tool.coverage.run]
source = ["core"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
# Regression floor on `core`, ratcheted just below current (64%) like the
# ruff complexity gates: it blocks a coverage drop, it does not force tests
# onto the operational management commands / entrypoints that are 0% by design.
fail_under = 63
show_missing = true

[tool.importlinter]
# Enforces the separation-of-concerns layering documented in CLAUDE.md.
root_packages = ["core", "tgbot", "trader", "web"]

[[tool.importlinter.contracts]]
name = "core layers: services > exchange > strategy"
type = "layers"
containers = ["core"]
layers = ["services", "exchange", "strategy"]

[[tool.importlinter.contracts]]
name = "strategy stays pure logic (no I/O or ORM)"
type = "forbidden"
source_modules = ["core.strategy"]
forbidden_modules = ["core.exchange", "core.services", "core.trading"]

[[tool.importlinter.contracts]]
name = "core does not import the entrypoints (tgbot / trader / web)"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["tgbot", "trader", "web"]
